--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "export": "echo \"The 'export' script is deprecated. Output is handled by 'next build' based on next.config.js.\""
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
     "@hookform/resolvers": "^4.1.3",
+    "@opentelemetry/exporter-jaeger": "^1.25.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -55,7 +57,6 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@opentelemetry/exporter-jaeger": "^1.25.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
