--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -11,7 +10,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "export": "echo \"The 'export' script is deprecated. Output is handled by 'next build' based on next.config.js.\""
+    "export": "next export"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
